Bug 1663731 - For two-touch gestures, don't send the pointercancel too early. r=botond

The existing code would send the pointercancel to web content as soon as the
second touchstart event was triggered for a pinch gesture. Instead, we want
to wait and see if the subsequent touchmove is cancelled before doing that.

Differential Revision: https://phabricator.services.mozilla.com/D92130